# gemini-desktop

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  lib.rs  shortcuts.rs  tray.rs  window_manager.rs
src/components/: Settings.tsx
src/i18n/: i18nContext.tsx
src/i18n/locales/: ar.json  az.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  sv.json  th.json  tr.json  uk.json  vi.json  zh.json
